--- a/source/ptx/ime-format.cfg
+++ b/source/ptx/ime-format.cfg
@@ -51,7 +51,6 @@ inline = [
     'articletitle',
     'attr',
     'c',
-    'cell',
     'copyright',
     'dblbrackets',
     'dblprime',
@@ -99,6 +98,8 @@ inline-empty = [
     'var',
     'pretext',
     'eval',
+    'ndash',
+    'mdash',
 ]
 # Block tags will always render themselves and their direct contents in (multiline) block style.
 block = [
