--- a/Scrivener/IME.scriv/Settings/ui.plist
+++ b/Scrivener/IME.scriv/Settings/ui.plist
@@ -5,12 +5,7 @@
 	<key>.lockedInPlace</key>
 	<false/>
 	<key>CollectionSelections</key>
-	<dict>
-		<key>2655DDF6-4AB8-42CB-A433-1CD76FC351D2</key>
-		<array>
-			<string>DC012F76-010A-429A-BD5A-35EA344C9913</string>
-		</array>
-	</dict>
+	<dict/>
 	<key>CommentsScaleFactor</key>
 	<real>1</real>
 	<key>CommentsUseTextScale</key>
@@ -91,8 +86,8 @@
 	</array>
 	<key>binderSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {323, 1172}}</string>
-		<string>{{324, 0}, {1941, 1172}}</string>
+		<string>{{0, 0}, {320, 1172}}</string>
+		<string>{{321, 0}, {1919, 1172}}</string>
 	</array>
 	<key>binderState</key>
 	<array>
@@ -5119,9 +5114,7 @@
 	<key>closedSuccessfully</key>
 	<true/>
 	<key>collectionSelectionAutosaveName</key>
-	<array>
-		<integer>0</integer>
-	</array>
+	<array/>
 	<key>collectionsHeight</key>
 	<real>118</real>
 	<key>collectionsRepresentedBinderDocumentsInfo</key>
@@ -5177,8 +5170,8 @@
 	<integer>0</integer>
 	<key>inspectorSplitFrames</key>
 	<array>
-		<string>{{0, 0}, {1521.5, 1142}}</string>
-		<string>{{1522.5, 0}, {418.5, 1142}}</string>
+		<string>{{0, 0}, {1499, 1142}}</string>
+		<string>{{1500, 0}, {419, 1142}}</string>
 	</array>
 	<key>inspectorWidth</key>
 	<real>419.5</real>
@@ -5257,7 +5250,7 @@
 	<key>mainDocumentEditor.textMode</key>
 	<integer>0</integer>
 	<key>mainWindowFrame</key>
-	<string>512 33 2265 1200 0 0 2560 1415 </string>
+	<string>0 35 2240 1200 0 0 2240 1235 </string>
 	<key>projectStatsSheet</key>
 	<dict>
 		<key>excludeAnnots</key>
@@ -5355,7 +5348,7 @@
 		<real>84</real>
 	</dict>
 	<key>supportingDocumentEditor.scrollRect</key>
-	<string>{{0, 438.80000000000001}, {1204.8, 868.80000000000018}}</string>
+	<string>{{0, -25.600000000000001}, {1187.2, 868.80000000000007}}</string>
 	<key>supportingDocumentEditor.selectedItemIDs</key>
 	<array/>
 	<key>supportingDocumentEditor.selectedItemUUIDs</key>
