--- a/Scrivener/IME.scriv/Settings/ui.plist
+++ b/Scrivener/IME.scriv/Settings/ui.plist
@@ -5,7 +5,12 @@
 	<key>.lockedInPlace</key>
 	<false/>
 	<key>CollectionSelections</key>
-	<dict/>
+	<dict>
+		<key>2655DDF6-4AB8-42CB-A433-1CD76FC351D2</key>
+		<array>
+			<string>E0164142-9BA4-4423-A825-725BC64D7745</string>
+		</array>
+	</dict>
 	<key>CommentsScaleFactor</key>
 	<real>1</real>
 	<key>CommentsUseTextScale</key>
@@ -5114,7 +5119,9 @@
 	<key>closedSuccessfully</key>
 	<true/>
 	<key>collectionSelectionAutosaveName</key>
-	<array/>
+	<array>
+		<integer>0</integer>
+	</array>
 	<key>collectionsHeight</key>
 	<real>118</real>
 	<key>collectionsRepresentedBinderDocumentsInfo</key>
@@ -5250,7 +5257,7 @@
 	<key>mainDocumentEditor.textMode</key>
 	<integer>0</integer>
 	<key>mainWindowFrame</key>
-	<string>0 35 2240 1200 0 0 2240 1235 </string>
+	<string>191 -98 2240 1200 0 0 2240 1235 </string>
 	<key>projectStatsSheet</key>
 	<dict>
 		<key>excludeAnnots</key>
@@ -5283,7 +5290,7 @@
 		<key>widths</key>
 		<dict>
 			<key>TITLE</key>
-			<real>200</real>
+			<real>288</real>
 		</dict>
 	</dict>
 	<key>selectedCollectionTabIndex</key>
